--- a/templates/home.html
+++ b/templates/home.html
@@ -31,10 +31,9 @@
     <div class="wrap narrow">
         <p class="section-eyebrow">Teams who drop me into production</p>
         <div class="logos-grid logos-grid--text">
-            <span>GameCity Kajaani</span>
-            <span>Thalassophobia</span>
-            <span>Kajaani UAS</span>
-            <span>Solo founders</span>
+            <a href="https://gamecitykajaani.fi/en/" target="_blank" rel="noopener">GameCity Kajaani</a>
+            <a href="https://store.steampowered.com/app/2507690/Thalassophobia/" target="_blank" rel="noopener">Thalassophobia</a>
+            <a href="https://kamk.fi/en/" target="_blank" rel="noopener">Kajaani UAS</a>
         </div>
     </div>
 </section>
@@ -230,7 +229,7 @@
                 <button type="submit" class="btn btn-primary" data-cta-id="final-cta-book">Book a €15 session</button>
             </form>
             {% endif %}
-            <a class="btn btn-outline" href="{{ site_links.mentoring }}" data-cta-id="final-cta-policies">View mentoring policies</a>
+            <a class="btn btn-outline" href="{{ site_links.contact }}" data-cta-id="final-cta-policies">Contact for details</a>
         </div>
     </div>
 </section>
