--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 /* style.css now composes modular styles to keep files focused and manageable */
 @import url('base.css');
 @import url('components.css');
-@import url('sections.css');
+@import url('sections-landing.css');
+@import url('sections-conversion.css');
